--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>store</title>
-    <link rel="stylesheet" type="text/css"  media="screen and (max-width:499.99px)"href="./mobile_product.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:500px)" href="./product.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-        <div class="container">
+        <main>
             <div class="image_box">
-                <img src="./Assets/images/image-product-desktop.jpg" alt="Perfume"></img>
+                
             </div>
             <div class="info">
-                <p style="margin-top:10%;letter-spacing:5px;text-align: left;padding-left: 10%;color: grey;">PERFUME</p>
+                <p>PERFUME</p>
                 <div class="content">
                     <h1>Gabrielle Essence 
                         Eau De Parfum</h1>
@@ -28,10 +27,10 @@
                 </div>
 
                 <div class="bottom">
-                    <p><span style="color:darkcyan;font-size:2em;font-weight:bold;">$149.99</span> <del>$169.99</del></p>
+                    <p><span>$149.99</span> <del>$169.99</del></p>
                     <button class="cart_btn"> Add to Cart</button>
                 </div>        
             </div>
-        </div>  
+        </main>  
 </body>
 </html>
